[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "json", "migrate", "time", "uuid"] }
tokio = { version = "1", features = ["full"] }
